--- a/Área Kids/index.html
+++ b/Área Kids/index.html
@@ -21,6 +21,9 @@
     <h2>
     Desenhos Animados e Trilhas Sonoras
     </h2>
+    <div>
+        <img src="https://youtu.be/yvIRwLfzt-o?si=u_-2mCswFbQCNfGZ" />
+    </div>
 </section>
 </body>
 </html>
